--- a/react-02/src/App.css
+++ b/react-02/src/App.css
@@ -1,10 +1,12 @@
 .App {
     text-align: center;
 }
+
 .App-logo {
     height: 40vmin;
     pointer-events: none;
 }
+
 .grid-container {
     margin: 0 auto;
     width: 960px;
@@ -14,34 +16,32 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 5px;
 }
+
 .icon {
     width: 100px;
     height: 100px;
 }
+
 #messageBox {
     height: 2em;
     line-height: 2em;
     font-size: 1.5em;
 }
 
-/* 
-.svg-link .icon {
-    fill: #fff;
-} */
-
-
-/* 
 .svg-link.icon:hover {
     fill: #777;
     stroke: #fff;
     stroke-width: 6px;
 }
+
 .svg-link {
     text-decoration: none;
 }
+
 .box {
     padding: 5px
 }
+
 .box:hover {
     border: 1px solid #000;
     background-color: #2f798d;
@@ -51,36 +51,39 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
 }
+
 .box:hover .svg-link #mapleLeaf {
     fill: #000;
     stroke: #881400;
     stroke-width: 20px;
 }
+
 .box:hover .svg-link #community {
     fill: #000;
 }
-#ticTacToe #grid {
+
+#tictactoe {
     stroke: #fff;
     fill: #fff;
 }
-#ticTacToe #X1, #ticTacToe #X2, #ticTacToe #X3, #ticTacToe #C1, #ticTacToe #C2, #ticTacToe #C3, #ticTacToe #Winner {
-    stroke: none;
-    fill: none;
-} */
+
 
 @media (prefers-reduced-motion: no-preference) {
     .App-logo {
         animation: App-logo-clock-spin infinite 20s linear;
         -webkit-animation: App-logo-clock-spin infinite 20s linear;
     }
+
     .counter {
         animation: App-logo-counter-spin infinite 10s linear;
         -webkit-animation: App-logo-counter-spin infinite 10s linear;
     }
+
     .clockwise {
         animation: App-logo-clock-spin infinite 10s linear;
         -webkit-animation: App-logo-clock-spin infinite 10s linear;
     }
+
     /* #piggyBank {
         animation: App-logo-counter-spin infinite 10s linear;
         -webkit-animation: App-logo-counter-spin infinite 10s linear;
@@ -134,19 +137,30 @@
         -webkit-animation: Play-Game infinite 14s 2s linear;
     } */
 }
-.App-header {
+
+.App-header,
+main {
     background-color: #282c34;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     font-size: calc(10px + 2vmin);
     color: white;
 }
+
+.App-header {
+    min-height: 10vh;
+}
+
+main {
+    height: 90vh;
+}
+
 .App-link {
     color: #61dafb;
 }
+
 @keyframes App-logo-clock-spin {
     from {
         transform: rotate(0deg);
@@ -155,6 +169,7 @@
         -ms-transform: rotate(0deg);
         -o-transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
         -webkit-transform: rotate(360deg);
@@ -163,6 +178,7 @@
         -o-transform: rotate(360deg);
     }
 }
+
 @keyframes App-logo-counter-spin {
     from {
         transform: rotate(0deg);
@@ -171,6 +187,7 @@
         -ms-transform: rotate(0deg);
         -o-transform: rotate(0deg);
     }
+
     to {
         transform: rotate(-360deg);
         -webkit-transform: rotate(-360deg);
@@ -179,12 +196,15 @@
         -o-transform: rotate(-360deg);
     }
 }
+
 @keyframes Play-Game {
     10% {
         fill: white;
     }
+
     90% {
         fill: transparent;
     }
 }
+
 @keyframes Tick-Tac-Toe {}
