--- a/react-02/src/App.css
+++ b/react-02/src/App.css
@@ -1,10 +1,18 @@
-.App {
+html,
+body {
+    background-color: #282c34;
+}
+
+.App,
+.main {
+    text-align: center;
     text-align: center;
 }
 
 .App-logo {
     height: 40vmin;
     pointer-events: none;
+
 }
 
 .grid-container {
@@ -141,21 +149,23 @@
 .App-header,
 main {
     background-color: #282c34;
+    color: white;
+
+}
+
+.App-header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    justify-content: flex-start;
+    /* font-size: calc(10px + 2vmin); */
 }
 
 .App-header {
     min-height: 10vh;
+    text-align: center;
 }
 
-main {
-    height: 90vh;
-}
 
 .App-link {
     color: #61dafb;
