--- a/react-02/src/components/Cities/community.css
+++ b/react-02/src/components/Cities/community.css
@@ -1,4 +1,5 @@
-.city-card {
+.city-card,
+.benchmark {
   border: 2px solid #fff;
   padding: 10px;
   width: 90%;
@@ -54,4 +55,24 @@
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
+}
+.benchmark {
+  background-color: #46b3f1;
+  /* width: 90%; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.benchmark-group {
+  color: #000;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.benchmark-group p {
+  font-weight: bolder;
+  font-size: 1.2em;
+  justify-self: left;
+  padding-left: 10px;
+}
+.benchmark-group h3 {
+  justify-self: right;
 }
