--- a/react-02/src/components/Account/account.css
+++ b/react-02/src/components/Account/account.css
@@ -1,6 +1,6 @@
 .account-app {
   margin: 0 auto;
-  border: solid 2px #fff;
+  border: solid 2px #fdfdff;
 }
 
 .account-list {
@@ -10,7 +10,7 @@
 
 .account-card {
   width: auto;
-  border: solid 1px #fff;
+  border: solid 1px #fdfdff;
   padding: 20px;
   contain: content;
 }
