--- a/react-02/src/css/community.css
+++ b/react-02/src/css/community.css
@@ -1,6 +1,6 @@
 .city-card,
 .benchmark {
-  border: 2px solid #fff;
+  border: 2px solid #fdfdff;
   padding: 10px;
   width: 90%;
   margin: 5px auto;
