--- a/01-getting-started/src/css/index.css
+++ b/01-getting-started/src/css/index.css
@@ -120,7 +120,6 @@ ol {
 }
 
 .content {
-  width: 75%;
   margin: 0 auto;
 }
 
@@ -144,7 +143,6 @@ footer {
   border: solid 4px #ffecd1ff;
   font-size: 1.5em;
   padding: 20px 30px;
-  width: 70%;
   margin: 25px auto;
   border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -172,7 +170,6 @@ footer {
 
 .container {
   margin: 0 auto;
-  width: 70%;
 }
 
 .control-group {
@@ -308,13 +305,13 @@ footer ul li a i {
   ##Screen = 1281px to higher resolution desktops
 */
 
-@media (min-width: 1281px) {
+@media screen and (min-width: 1281px) {
   .top-nav {
     min-height: 150px;
   }
 
   nav.top-nav ul li:first-child {
-    margin-left: 298px;
+    margin-left: 200px;
   }
 
   nav.top-nav ul li {
@@ -328,6 +325,19 @@ footer ul li a i {
 
   header div.fsd {
     width: 370px;
+  }
+  .header-img {
+    width: 73%;
+    margin: 0 auto;
+  }
+  section,
+  footer {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  #section-2 article {
+    width: 70%;
   }
 
   .content {
@@ -345,7 +355,7 @@ footer ul li a i {
   ##Screen = B/w 1025px to 1280px
 */
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280 px) {
   .top-nav {
     border: #f7931e;
     width: 100%;
@@ -707,24 +717,29 @@ footer ul li a i {
     width: 100%;
     margin: 0 auto;
   }
+
   .container {
     margin: 0 auto;
     width: 100%;
   }
+
   section,
   footer {
     padding: 20px 5px;
     min-height: 60 0px;
   }
+
   #section-2 article {
     width: 90%;
   }
+
   .control-group input.control {
     width: 96%;
     text-align: right;
     padding: 2px 10px;
     color: #001524ff;
   }
+
   .messageBoard {
     height: 200px;
     line-height: 200px;
