--- a/03-objects/src/scripts/account/css/index.css
+++ b/03-objects/src/scripts/account/css/index.css
@@ -1,52 +1,95 @@
-    html, body {
+    html,
+    body {
         font-size: 16px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         color: #444;
         padding: 0;
         margin: 0;
     }
+
     body {
         display: relative;
     }
+
     section {
         margin: 0;
         background-color: #c6f2ff;
-        height: 100vh;
-        padding: 10px;
+        padding: 50px;
     }
+
     h1 {
         font-size: 3em;
     }
+
     section h1 {
         text-align: center;
     }
+
     h2 {
         font-size: 2.7em;
         font-weight: bolder;
         margin-bottom: 10px;
     }
+
     h3 {
         font-size: 2.3em;
         font-weight: bolder;
         margin-bottom: 10px;
     }
+
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    /* Firefox */
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+    .hidden{
+        display: none;
+    }
+    .error{
+        color: red;
+        font-weight: bolder;
+        font-size: 1.3em;
+    }
+    .nav {
+        display: block;
+    }
+
+    .nav ul {
+        display: inline-block;
+        list-style-type: none;
+    }
+
+    .nav ul li {
+        float: left;
+    }
+
     #banking-app {
         /* height: 100vh; */
         background-color: #eee;
         margin: 20px;
     }
+
     #banking-app>.container {
         height: 900px;
         contain: content;
     }
+
     .col {
         height: 880px;
         margin-bottom: 20px;
     }
+
     #account-list-header {
         display: inline-block;
         width: 90%;
     }
+
     #sorting {
         position: relative;
         top: 20px;
@@ -65,6 +108,7 @@
         -o-border-radius: 20px;
         margin-right: 30px;
     }
+
     #sorting hr {
         position: relative;
         top: -15px;
@@ -72,30 +116,39 @@
         margin: 0;
         padding: 0;
     }
+
     .fas {
         font-size: 2.5em;
     }
-    a#btnAscending, a#btnDescending {
+
+    a#btnAscending,
+    a#btnDescending {
         position: relative;
         left: -2px;
     }
+
     a#btnAscending {
         top: 0;
     }
+
     a#btnDescending {
         bottom: 0;
         top: -30px;
     }
-    .fa-sort-up, .fa-sort-down {
+
+    .fa-sort-up,
+    .fa-sort-down {
         position: relative;
         height: 16px;
         margin: 0;
         padding: 0;
     }
+
     .container {
         padding: 20px;
         position: relative;
     }
+
     .control {
         width: 95%;
         margin: 0 auto;
@@ -103,23 +156,29 @@
         line-height: 2em;
         overflow: contain;
     }
+
     label.control {
         font-weight: bold;
         font-size: 2em;
     }
-    input[type="text"].control {
+
+    input[type="text"].control,
+    input[type="number"].control {
         font-weight: bold;
         font-size: 2em;
         text-align: right;
         padding-right: 20px;
     }
+
     .border-5 {
         border: 5px solid #444;
     }
+
     .border-bottom {
         border: none;
         border-bottom: solid 1px #444;
     }
+
     .account-name {
         color: #444;
         font-size: 2.3em;
@@ -128,6 +187,7 @@
         margin-bottom: 10px;
         background-color: transparent;
     }
+
     .rounded-10 {
         border-radius: 10px;
         -webkit-border-radius: 10px;
@@ -135,6 +195,7 @@
         -ms-border-radius: 10px;
         -o-border-radius: 10px;
     }
+
     .rounded-20 {
         border-radius: 20px;
         -webkit-border-radius: 20px;
@@ -142,6 +203,7 @@
         -ms-border-radius: 20px;
         -o-border-radius: 20px;
     }
+
     .grid-col-2 {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -154,6 +216,7 @@
         overflow-y: auto;
         overflow-x: hidden;
     }
+
     .cf:after {
         content: '';
         /* 1 */
@@ -161,6 +224,7 @@
         /* 2 */
         clear: both;
     }
+
     .control-group {
         position: relative;
         width: auto;
@@ -169,12 +233,15 @@
         margin: 0 auto;
         min-height: 100px;
     }
+
     #account-manager {
         height: 350px
     }
+
     #transactions {
         height: 250px;
     }
+
     .container input[type="button"] {
         position: absolute;
         min-width: 200px;
@@ -195,20 +262,26 @@
         -ms-transition: all .5s;
         -o-transition: all .5s;
     }
-    .container input[type="button"]:active, .container input[type="button"]:hover {
+
+    .container input[type="button"]:active,
+    .container input[type="button"]:hover {
         background-color: #585858;
         border: solid 5px #333;
         color: #eee;
     }
+
     .container input#btnAccountTransaction {
         right: 10px;
     }
+
     .container input[value="Deposit"] {
         left: 10px;
     }
+
     .container input[value="Withdrawal"] {
         right: 10px;
     }
+
     .card {
         position: relative;
         display: block;
@@ -225,11 +298,14 @@
         margin: 0 auto;
         margin-bottom: 5px;
     }
+
     .card.active {
         border: solid 5px #333;
         background-color: #f8f8cd;
     }
-    .card h3, .card p {
+
+    .card h3,
+    .card p {
         margin: 0;
         padding: 0;
         font-weight: bolder;
@@ -239,26 +315,34 @@
         bottom: 15px;
         color: red;
     }
+
     .card h3 {
         left: 10px;
     }
+
     .card p {
         right: 20px;
     }
-    #btnDeposit, #btnWithdrawal, #btnCreateAccount {
+
+    #btnDeposit,
+    #btnWithdrawal,
+    #btnCreateAccount {
         bottom: 10px;
     }
+
     /* City form */
-    
+
     #citiesApplication .container .col>h2 {
         text-align: center;
         /* color: #444; */
     }
+
     /*  City and community */
-    
+
     #citySection {
         color: #fff;
     }
+
     #cityList {
         padding-top: 35px;
         ;
@@ -272,6 +356,7 @@
         height: 750px;
         overflow-y: scroll;
     }
+
     .city {
         flex-basis: 45%;
         position: relative;
@@ -282,15 +367,18 @@
         padding-top: 30px;
         height: 200px;
     }
+
     .city:hover {
         border: solid #000 3px;
         flex-basis: 44.5%;
     }
+
     .city.selected {
         border: 1px solid rgb(53, 52, 52);
         background-color: #f7bf70;
         color: #444;
     }
+
     .city h2 {
         background-color: #4CBBD6;
         font-size: 2rem;
@@ -306,6 +394,7 @@
         -o-border-radius: 10px 10px 0 0;
         box-shadow: 5px 10px 8px #968c8c;
     }
+
     .btnClose {
         position: absolute;
         top: 5px;
@@ -325,31 +414,39 @@
         -o-border-radius: 4px;
         z-index: 10;
     }
+
     .city .btnClose:hover {
         color: #000;
         border-color: #000;
     }
+
     div.city :first-child {
         margin-top: 20px;
     }
+
     .city div {
         position: relative;
         height: 40px
     }
-    .city div h3, .city div p {
+
+    .city div h3,
+    .city div p {
         position: absolute;
         left: 15px;
         display: inline-block;
     }
+
     .city div h3 {
         font-size: 1.4em;
         padding-left: 10px;
     }
+
     .city div p {
         padding-left: 40px;
         font-size: 1.2em;
         left: 150px;
     }
+
     .city div button {
         position: absolute;
         right: 5px;
@@ -358,37 +455,46 @@
         width: 30px;
         background: transparent;
     }
+
     .cityInfoRow h3 {
         width: 200px;
         margin-left: 10px;
         font-size: 1.5em;
     }
+
     .cityInfoRow p {
         font-size: 1.2em;
     }
+
     .city.active {
         border: solid 5px #333;
         flex-basis: 44%;
         background-color: #f8f8cd;
     }
+
     #controls {
         background-color: #1F4980;
         height: 800px;
     }
-    #controls .container:nth-child(2) div, #controls .container:nth-child(2) div:nth-child(2) {
+
+    #controls .container:nth-child(2) div,
+    #controls .container:nth-child(2) div:nth-child(2) {
         display: grid;
         padding: 10px;
         width: 100%;
     }
+
     #controls .container div {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
     #controls .container:nth-child(2) input[type="button"] {
         position: relative;
         bottom: none;
         justify-self: center;
         align-self: center;
     }
+
     .city .adjustPopulation {
         position: absolute;
         background-color: #E1C59F;
@@ -405,10 +511,12 @@
         -ms-border-radius: 10px;
         -o-border-radius: 10px;
     }
+
     .hidden {
         visibility: hidden;
     }
-    .city .adjustPopulation h3 {}
+
+    /* .city .adjustPopulation h3 {} */
     .city .adjustPopulation input[type='text'] {
         position: absolute;
         top: 80px;
@@ -421,6 +529,7 @@
         padding-right: 5px;
         ;
     }
+
     .city .adjustPopulation button {
         position: absolute;
         top: 120px;
@@ -428,14 +537,16 @@
         background-color: #6196ec;
         width: 45%;
     }
+
     .city .adjustPopulation button+button {
         left: 50%;
     }
+
     /* .city .adjustPopulation .populationModifier{
 
     } */
     /*  */
-    
+
     div#overlay {
         position: absolute;
         top: 0;
@@ -447,6 +558,7 @@
         overflow: auto;
         z-index: 99;
     }
+
     div#overlay div {
         text-align: center;
         padding: 20px;
@@ -460,17 +572,21 @@
         -o-border-radius: 20px;
         overflow: hidden;
     }
+
     div#overlay h2 {
         display: block;
         color: #fff;
     }
+
     div#overlay h3 {
         color: #fff;
     }
+
     div#overlay p {
         color: #fff;
         font-size: 2em;
     }
+
     div#overlay button {
         font-size: 1.4em;
         border-radius: 20px;
@@ -483,17 +599,98 @@
         -ms-border-radius: 20px;
         -o-border-radius: 20px;
     }
-     ::-webkit-input-placeholder {
+
+    ::-webkit-input-placeholder {
         /* Edge */
         color: rgba(119, 119, 119, 0.31);
     }
-     :-ms-input-placeholder {
+
+    :-ms-input-placeholder {
         /* Internet Explorer 10-11 */
         color: rgba(119, 119, 119, 0.31);
     }
-     ::placeholder {
+
+    ::placeholder {
         color: rgba(119, 119, 119, 0.31);
     }
+
     .red {
         background-color: #AE5858;
     }
+
+    /* class applies to select element itself, not a wrapper element */
+.select-css {
+	display: block;
+	font-size: 16px;
+	font-family: sans-serif;
+	font-weight: 700;
+	color: #444;
+	line-height: 1.3;
+	padding: .6em 1.4em .5em .8em;
+	width: 100%;
+	max-width: 100%; /* useful when width is set to anything other than 100% */
+	box-sizing: border-box;
+	margin: 0;
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+	border-radius: .5em;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background-color: #fff;
+	/* note: bg image below uses 2 urls. The first is an svg data uri for the arrow icon, and the second is the gradient. 
+		for the icon, if you want to change the color, be sure to use `%23` instead of `#`, since it's a url. You can also swap in a different svg icon or an external image reference
+		
+	*/
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+	  linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+	background-repeat: no-repeat, repeat;
+	/* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
+	background-position: right .7em top 50%, 0 0;
+	/* icon size, then gradient */
+	background-size: .65em auto, 100%;
+}
+/* Hide arrow icon in IE browsers */
+.select-css::-ms-expand {
+	display: none;
+}
+/* Hover style */
+.select-css:hover {
+	border-color: #888;
+}
+/* Focus style */
+.select-css:focus {
+	border-color: #aaa;
+	/* It'd be nice to use -webkit-focus-ring-color here but it doesn't work on box-shadow */
+	box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+	box-shadow: 0 0 0 3px -moz-mac-focusring;
+	color: #222; 
+	outline: none;
+}
+
+/* Set options to normal weight */
+.select-css option {
+	font-weight:normal;
+}
+
+/* Support for rtl text, explicit support for Arabic and Hebrew */
+*[dir="rtl"] .select-css, :root:lang(ar) .select-css, :root:lang(iw) .select-css {
+	background-position: left .7em top 50%, 0 0;
+	padding: .6em .8em .5em 1.4em;
+}
+
+/* Disabled styles */
+.select-css:disabled, .select-css[aria-disabled=true] {
+	color: graytext;
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+	  linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+}
+
+.select-css:disabled:hover, .select-css[aria-disabled=true] {
+	border-color: #aaa;
+}
+
+
+body {
+  margin: 2rem;
+}
