--- a/react-01/src/App.css
+++ b/react-01/src/App.css
@@ -3,10 +3,26 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
-
+.btn{
+  font-size: 1em;
+  line-height: 1.2em;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
+.btn-primary{
+  border:solid 2px #118fb3;
+  background-color: #2cb3d8;
+}
+.btn-primary:hover{
+  border:solid 2px #2cb3d8;
+  background-color: #118fb3;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
