--- a/react-01/src/index.css
+++ b/react-01/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1,h2,h3{
+  margin-top: 5px;
+  margin-bottom: 0;
+}
+.red{
+  color: red;
+}
+.blue{
+  color: blue;
+}
